✨ new(popup): added popupContainerClass option to pass custom class to fullscreen popup.

--- a/demo.html
+++ b/demo.html
@@ -52,6 +52,7 @@
         // strictMode: true,
         // useFullscreenPopup: true,
         // validationNumberTypes: null,
+		// popupContainerClass: "test-popup",
       });
       window.iti = iti; // useful for testing
 
