✨ new(popup): added test case for popupContainerClass.

--- a/spec.html
+++ b/spec.html
@@ -78,6 +78,8 @@
   
   <script src="src/spec/tests/options/placeholderNumberType.js"></script>
   
+  <script src="src/spec/tests/options/popupContainerClass.js"></script>
+  
   <script src="src/spec/tests/options/useFullscreenPopup.js"></script>
   
   <script src="src/spec/tests/static/defaults.js"></script>
