--- a/demo.html
+++ b/demo.html
@@ -42,7 +42,7 @@
         // },
         // hiddenInput: () => ({ phone: "phone_full", country: "country_code" }),
         // i18n: { 'de': 'Deutschland' },
-        initialCountry: "us",
+        // initialCountry: "us",
         // loadUtils: () => import("/build/js/utils.js"), // leading slash (and http-server) required for this to work in chrome
         // nationalMode: false,
         // onlyCountries: ['us', 'gb', 'ch', 'ca', 'do'],
