fix: update form validation demo title and description in index.html

--- a/angular/demo/form/index.html
+++ b/angular/demo/form/index.html
@@ -6,13 +6,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link rel="stylesheet" href="../../../build/css/intlTelInput.css" />
   <link rel="stylesheet" href="../../../build/css/demo.css" />
-  <title>Angular App - Set Number Demo</title>
+  <title>Angular App - Form Validation Demo</title>
 </head>
 
 <body>
-  <h1>Angular App - Set Number Demo</h1>
-  <p>A simple Angular app, using the IntlTelInput component to handle phone number entry, calling setNumber and validation.</p>
-  <p>Click "Set Number" then click "Validate" to check that the angular internals have updated correctly.</p>
+  <h1>Angular Form Validation Demo</h1>
+  <p>A simple Angular app using reactive forms with the IntlTelInput component for phone number entry and validation.</p>
+  <p>Enter a phone number and click "Validate" to see form validation in action.</p>
   <app-root></app-root>
   <script src="./form-bundle.js"></script>
 </body>
