Rename validationNumberTypes and change default

--- a/demo.html
+++ b/demo.html
@@ -52,7 +52,7 @@
         // separateDialCode: true,
         // strictMode: true,
         // useFullscreenPopup: true,
-        // validationNumberTypes: null,
+        // allowedNumberTypes: null,
       });
       window.iti = iti; // useful for testing
 
