--- a/demo.html
+++ b/demo.html
@@ -42,7 +42,7 @@
         //     .catch(function() { callback(); });
         // },
         // hiddenInput: () => ({ phone: "phone_full", country: "country_code" }),
-        // i18n: { 'de': 'Deutschland' },
+        // i18n: { searchPlaceholder: "Custom search" },
         // initialCountry: "us",
         // loadUtils: () => import("/build/js/utils.js"), // leading slash (and http-server) required for this to work in chrome
         // nationalMode: false,
