New option: allowNumberExtensions

--- a/demo.html
+++ b/demo.html
@@ -22,6 +22,8 @@
       const input = document.querySelector("#phone");
       const iti = window.intlTelInput(input, {
         // allowDropdown: false,
+        // allowNumberExtensions: true,
+        // allowPhonewords: true,
         // autoPlaceholder: "off",
         // containerClass: "test",
         // countryNameLocale: "ru",
