website: storybook redirect

--- a/site/static/examples/index.html
+++ b/site/static/examples/index.html
@@ -6,7 +6,7 @@
 		<title>Redirecting…</title>
 
 		<meta http-equiv="refresh" content="0; url=/examples/validation-practical.html" />
-		<link rel="canonical" href="/examples/validation-practical.html" />
+		<link rel="canonical" href="https://intl-tel-input.com/examples/validation-practical.html" />
 
 		<script>
 			// Use replace so /examples doesn't stay in history.
