--- a/site/static/examples/localise-countries.html
+++ b/site/static/examples/localise-countries.html
@@ -6,7 +6,7 @@
 		<title>Redirecting…</title>
 
 		<meta http-equiv="refresh" content="0; url=/examples/internationalisation.html" />
-		<link rel="canonical" href="/examples/internationalisation.html" />
+		<link rel="canonical" href="https://intl-tel-input.com/examples/internationalisation.html" />
 
 		<script>
 			// Use replace so /examples/localise-countries.html doesn't stay in history.
