--- a/site/static/examples/validation.html
+++ b/site/static/examples/validation.html
@@ -6,7 +6,7 @@
 		<title>Redirecting…</title>
 
 		<meta http-equiv="refresh" content="0; url=/examples/validation-precise.html" />
-		<link rel="canonical" href="/examples/validation-precise.html" />
+		<link rel="canonical" href="https://intl-tel-input.com/examples/validation-precise.html" />
 
 		<script>
 			// Use replace so /examples/validation.html doesn't stay in history.
