--- a/site/static/storybook/index.html
+++ b/site/static/storybook/index.html
@@ -5,18 +5,18 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<title>Redirecting…</title>
 
-		<meta http-equiv="refresh" content="0; url=/playbook" />
-		<link rel="canonical" href="https://intl-tel-input.com/playbook" />
+		<meta http-equiv="refresh" content="0; url=/playground" />
+		<link rel="canonical" href="https://intl-tel-input.com/playground" />
 
 		<script>
 			// Use replace so /storybook doesn't stay in history.
-			window.location.replace("/playbook");
+			window.location.replace("/playground");
 		</script>
 	</head>
 	<body>
 		<p>
 			Redirecting to
-			<a href="/playbook">/playbook</a>…
+			<a href="/playground">/playground</a>…
 		</p>
 	</body>
 </html>
