--- a/site/src/shared/common_meta_tags.html
+++ b/site/src/shared/common_meta_tags.html
@@ -1,3 +1,3 @@
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-<link rel="icon" href="/img/icon.png" />
+<link rel="icon" type="image/x-icon" href="/favicon.ico">
