site: playground: JS init code block

--- a/site/src/playground/playground_content.html
+++ b/site/src/playground/playground_content.html
@@ -8,14 +8,36 @@
         (You can also set options via URL params, e.g. <code>?initialCountry=gb&amp;separateDialCode=true</code>).
       </span>
     </p>
-
-    <div style="max-width: 520px;">
-      <input type="tel" id="playgroundPhone" />
-      <div class="iti-live-results">Type a number above to see the output here</div>
-    </div>
   </div>
 
   <div class="row g-4">
+    <div class="col-12 col-lg-6">
+      <div class="card">
+        <div class="card-body">
+          <h2 class="h5 mb-3">Live Demo</h2>
+
+          <div style="max-width: 520px;">
+            <input type="tel" id="playgroundPhone" />
+            <div class="iti-live-results">Type a number above to see the output here</div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="col-12 col-lg-6">
+      <div class="card">
+        <div class="card-body">
+          <div class="d-flex align-items-center justify-content-between gap-2">
+            <h2 class="h5 mb-0">Initialisation code</h2>
+          </div>
+          <p class="text-muted mt-2 mb-3">
+            JavaScript snippet for initialising the plugin with your (non-default) options.
+          </p>
+          <pre class="mb-0 language-javascript"><code id="playgroundInitCode" class="language-javascript"></code></pre>
+        </div>
+      </div>
+    </div>
+
     <div class="col-12 col-lg-6">
       <div class="card">
         <div class="card-body">
