--- a/site/src/playground/playground_content.html
+++ b/site/src/playground/playground_content.html
@@ -11,7 +11,7 @@
   </div>
 
   <div class="row g-4">
-    <div class="col-12 col-lg-6">
+    <div class="col-12 col-lg-6 order-1">
       <div class="card">
         <div class="card-body">
           <h2 class="h5 mb-3">Live Demo</h2>
@@ -24,7 +24,7 @@
       </div>
     </div>
 
-    <div class="col-12 col-lg-6">
+    <div class="col-12 col-lg-6 order-4 order-lg-2">
       <div class="card">
         <div class="card-body">
           <div class="d-flex align-items-center justify-content-between gap-2">
@@ -38,7 +38,7 @@
       </div>
     </div>
 
-    <div class="col-12 col-lg-6">
+    <div class="col-12 col-lg-6 order-2 order-lg-3">
       <div class="card">
         <div class="card-body">
           <div class="d-flex align-items-center justify-content-between gap-2">
@@ -58,7 +58,7 @@
       </div>
     </div>
 
-    <div class="col-12 col-lg-6">
+    <div class="col-12 col-lg-6 order-3 order-lg-4">
       <div class="card">
         <div class="card-body">
           <div class="d-flex align-items-center justify-content-between gap-2">
