--- a/site/src/playground/playground_content.html
+++ b/site/src/playground/playground_content.html
@@ -22,7 +22,7 @@
               </div>
             </div>
             <p class="text-muted mt-2 mb-3">
-              Changes re-initialise the plugin on the input above.
+              Any changes here will re-initialise the plugin.
             </p>
 
             <form id="playgroundOptions" class="vstack gap-3" aria-label="intl-tel-input initialisation options">
@@ -42,7 +42,7 @@
               </div>
             </div>
             <p class="text-muted mt-2 mb-3">
-              Changes re-initialise the plugin on the input above.
+              Any changes here will re-initialise the plugin.
             </p>
 
             <form id="playgroundAttributes" class="vstack gap-3" aria-label="Phone input attributes">
@@ -58,6 +58,9 @@
       <div class="card">
         <div class="card-body">
           <h2 class="h5 mb-3">Live Demo</h2>
+          <p class="text-muted mt-2 mb-3">
+            This input is emptied when the options are changed. For a persistent number, see the Input Attributes section.
+          </p>
 
           <div style="max-width: 520px;">
             <input type="tel" id="playgroundPhone" />
