playground: add loadutils option

--- a/site/src/playground/playground_content.html
+++ b/site/src/playground/playground_content.html
@@ -77,7 +77,7 @@
             <h2 class="h5 mb-0">Initialisation code</h2>
           </div>
           <p class="text-muted mt-2 mb-3">
-            JavaScript snippet for initialising the plugin with your (non-default) options.
+            JavaScript snippet for initialising the plugin with your (non-default) options. By default, we add <code>loadUtils</code> for formatting/placeholders.
           </p>
           <pre class="mb-0 language-javascript"><code id="playgroundInitCode" class="language-javascript"></code></pre>
         </div>
