site: styling/copy tweaks

--- a/site/src/playground/playground_content.html
+++ b/site/src/playground/playground_content.html
@@ -67,7 +67,7 @@
         <div class="card-body">
           <h2 class="h5 mb-3">Live Demo</h2>
           <p class="text-muted mt-2 mb-3">
-            This input is emptied when the options are changed. For a persistent number, see the Input Attributes section.
+            This is reset each time the options are changed. For a persistent number, see the Attributes section.
           </p>
 
           <div style="max-width: 520px;">
