Add github link to mobile nav

--- a/site/src/homepage/homepage_content.html
+++ b/site/src/homepage/homepage_content.html
@@ -1,13 +1,13 @@
 <div class="d-flex flex-column align-items-center text-center homepage-content">
   <h1>International Telephone&nbsp;Input</h1>
   <p class="subtitle">A JavaScript plugin for entering, formatting and validating international telephone numbers. React, Vue, Angular and Svelte components also included.</p>
-  
+
   <div class="demo section section--homepage-demo">
     <input type="tel" id="phone" />
     <div class="iti-live-results">Type a number above to see the output here</div>
     <a href="/docs" class="btn btn-primary btn-lg">Get started</a>
   </div>
-  
+
   <div class="section section--twilio">
     <h2>Sponsored by</h2>
     <img src="/img/twilio.png" height="100" alt="Twilio logo" />
@@ -20,7 +20,7 @@
       >. We can't wait to see what you build.
     </p>
   </div>
-  
+
   <div class="section section--features">
     <h2>Features</h2>
     <ul>
@@ -40,11 +40,11 @@
       <li>Lots of initialisation options for customisation, as well as instance methods/events for interaction</li>
     </ul>
   </div>
-  
+
   <div class="section">
     <h2>Testing</h2>
     <p>
-      Browser testing via <a href="https://www.lambdatest.com/" target="_blank"><img src="/img/lambda-test-blue-logo.svg" style="vertical-align:middle;margin-left:5px" width="147" height="26" class="lambda-logo" alt="LambdaTest logo" /></a>
+      Browser testing via <a href="https://www.lambdatest.com/"><img src="/img/lambda-test-blue-logo.svg" style="vertical-align:middle;margin-left:5px" width="147" height="26" class="lambda-logo" alt="LambdaTest logo" /></a>
     </p>
   </div>
 </div>
