playground: copy button

--- a/site/src/playground/playground_content.html
+++ b/site/src/playground/playground_content.html
@@ -83,6 +83,9 @@
         <div class="card-body">
           <div class="d-flex align-items-center justify-content-between gap-2">
             <h2 class="h5 mb-0">Initialisation code</h2>
+            <div class="d-flex gap-2">
+              <button type="button" class="btn btn-outline-secondary btn-sm" id="playgroundCopyInitCode" aria-label="Copy initialisation code">Copy</button>
+            </div>
           </div>
           <p class="text-muted mt-2 mb-3">
             JavaScript snippet for initialising the plugin with your (non-default) options. By default, we add <code>loadUtils</code> for formatting/placeholders.
