site: remove .html file extension from links

--- a/site/src/examples/copy/validation_precise_desc.html
+++ b/site/src/examples/copy/validation_precise_desc.html
@@ -1,4 +1,4 @@
-<p>DANGER: Various countries around the world update their number rules every month, so <code>isValidNumberPrecise</code> will start rejecting valid numbers unless you constantly keep it up-to-date e.g. via an automated script. For this reason, we strongly recommend sticking to <a href="/examples/validation-practical.html">the standard validation method</a> which is much more stable as it only checks number length rules, which rarely change.</p>
+<p>DANGER: Various countries around the world update their number rules every month, so <code>isValidNumberPrecise</code> will start rejecting valid numbers unless you constantly keep it up-to-date e.g. via an automated script. For this reason, we strongly recommend sticking to <a href="/examples/validation-practical">the standard validation method</a> which is much more stable as it only checks number length rules, which rarely change.</p>
 
 <p><code>isValidNumberPrecise</code> respects the <code>allowedNumberTypes</code> option, which is set to <code>["MOBILE"]</code> by default, meaning it will only return <code>true</code> for mobile numbers.</p>
 
