--- a/site/src/shared/bootstrap_styles.html
+++ b/site/src/shared/bootstrap_styles.html
@@ -5,6 +5,12 @@
   crossorigin="anonymous"
 />
 
+<link
+  href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"
+  rel="stylesheet"
+  crossorigin="anonymous"
+/>
+
 <!-- Bootstrap v5.3 requires a data-bs-theme attribute to support dark mode -->
 <script>
   const setTheme = () => {
