--- a/site/src/homepage/homepage_content.html
+++ b/site/src/homepage/homepage_content.html
@@ -171,7 +171,7 @@
     <div class="d-flex flex-wrap justify-content-center gap-2">
       <a class="btn btn-outline-primary btn-sm" href="/playground?initialCountry=auto&geoIpLookup=true&loadUtils=true">Auto country lookup</a>
       <a class="btn btn-outline-primary btn-sm" href="/playground?strictMode=true&initialCountry=us&loadUtils=true">Strict numeric mode</a>
-      <a class="btn btn-outline-primary btn-sm" href="/playground?allowDropdown=false&onlyCountries=%5B%22us%22%5D&showFlags=false&loadUtils=true">Single-country input</a>
+      <a class="btn btn-outline-primary btn-sm" href="/playground?onlyCountries=%5B%22al%22%2C%22ad%22%2C%22at%22%2C%22by%22%2C%22be%22%2C%22ba%22%2C%22bg%22%2C%22hr%22%2C%22cz%22%2C%22dk%22%2C%22ee%22%2C%22fo%22%2C%22fi%22%2C%22fr%22%2C%22de%22%2C%22gi%22%2C%22gr%22%2C%22va%22%2C%22hu%22%2C%22is%22%2C%22ie%22%2C%22it%22%2C%22lv%22%2C%22li%22%2C%22lt%22%2C%22lu%22%2C%22mk%22%2C%22mt%22%2C%22md%22%2C%22mc%22%2C%22me%22%2C%22nl%22%2C%22no%22%2C%22pl%22%2C%22pt%22%2C%22ro%22%2C%22ru%22%2C%22sm%22%2C%22rs%22%2C%22sk%22%2C%22si%22%2C%22es%22%2C%22se%22%2C%22ch%22%2C%22ua%22%2C%22gb%22%5D&initialCountry=gb">Only European countries</a>
       <a class="btn btn-outline-primary btn-sm" href="/playground?countryNameLocale=vi&i18n=vi&initialCountry=vn">Vietnamese UI</a>
     </div>
 
