site: formatting/styling/code indentation tweaks

--- a/site/src/homepage/homepage_content.html
+++ b/site/src/homepage/homepage_content.html
@@ -1,6 +1,6 @@
 <div class="d-flex flex-column align-items-center text-center homepage-content">
   <div class="section section--homepage-demo demo d-flex flex-column align-items-center">
-    <h1>International Telephone&nbsp;Input</h1>
+    <h1>International<br><span class="keep-together">Telephone Input</span></h1>
     <p class="subtitle">A JavaScript plugin for entering, formatting and validating international telephone numbers. Includes TypeScript definitions, plus React, Vue, Angular and Svelte components.</p>
     <div>
       <input type="tel" id="phone" />
